# ultravox

./: CMakeLists.txt  README.md  vcpkg.json
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: Apple.cpp  Apple.h  Camera3D.cpp  Chunk.h  ChunkManager.h  Cube.cpp  Editor.cpp  FastNoiseLite.h  House.cpp  House.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Laser.h  Light.h  Logger.h  Octree.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PlayerCharacter.cpp  PlayerCharacter.h  Sphere.cpp  Sphere.h  TerrainGenerator.cpp  TerrainGenerator.h  TextureManager.cpp  TextureManager.h  Transform.h  Tree.cpp  Tree.h  Vertex.cpp  Vertex.h  Voxel.cpp  Weapon.h  WorldItem.cpp  WorldItem.h  helpers.cpp  helpers.h  main.cpp  (+3 more)
src/components/: FortificationSegment.cpp  FortificationSegment.h  House.cpp  House.h  Tree.cpp  Tree.h  WarTornCoolingTower.cpp  WarTornCoolingTower.h  WarTornDome.cpp  WarTornDome.h
src/items/: Laser.cpp  Weapon.cpp  WorldItem.h
